--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "babel-loader": "8.1.0",
     "framer-motion": "^4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -23,7 +24,8 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "chromatic": "npx chromatic --project-token=7cc6b468d132"
+    "chromatic": "npx chromatic --project-token=7cc6b468d132",
+    "cypress": "cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -54,12 +56,21 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^6.4.18",
     "@storybook/addon-actions": "^6.4.9",
     "@storybook/addon-essentials": "^6.4.9",
     "@storybook/addon-links": "^6.4.9",
     "@storybook/node-logger": "^6.4.9",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.4.9",
-    "chromatic": "^6.4.3"
+    "@storybook/testing-react": "^1.2.3",
+    "chromatic": "^6.4.3",
+    "cypress": "^9.4.1",
+    "jest-axe": "^5.0.1",
+    "msw": "^0.36.8",
+    "msw-storybook-addon": "^1.6.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
